# universal-modifier

./: .clang-format  .gitignore  CMakeLists.txt  baseAddressFind.hpp  config.json  run.cpp
.github/workflows/: cmake-single-platform.yml
games/HollowKnight/: knight.hpp
include/: baseAddressFind.hpp  kernel.hpp  memoryOffset.h  runtime.hpp
include/detail/: format.hpp  modifier_status.hpp  typelist.hpp
src/: CMakeLists.txt  run.cc
